fix: Mobile Navbar added Mobile navbar was created with pure css overflow:hidden removed

--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -30,8 +30,8 @@
 
 
   &__search-icon{
-    width: 4rem;
-    height: 4rem;
+    width: 3rem;
+    height: 3rem;
   }
 
   &__nav:checked ~ .search{
